# RYSX_ws

./: .gitignore  readme.md  settings.json  settings.md
analyse/: plot_data.py  plot_multiple_file.py
car_pkg/: CMakeLists.txt  package.xml
car_pkg/launch/: node_ruying.launch  px4_ruying.launch  readme.txt
car_pkg/shell/: car.sh
car_pkg/src/: test.py
offboard_pkg/: CMakeLists.txt  package.xml  readme.md
offboard_pkg/launch/: rysx.launch
offboard_pkg/script/: avoidance.py  flow.py  main.py  test.py  utils.1.py  utils.py
offboard_pkg/shell/: all.sh  cleanLog.sh  flight.sh
px4_offboard_controled_by_vins/: CMakeLists.txt  README.md  package.xml
px4_offboard_controled_by_vins/launch/: main.launch
px4_offboard_controled_by_vins/src/: offboard.cpp
simulation/: CMakeLists.txt  package.xml
simulation/launch/: mavros_posix_sitl.launch  sim.launch  sim_gazebo.launch
simulation/script/: depth_pub.py  fake_pub.py  img_pub.py  main.py  sphere_control.py  utils.py
simulation/shell/: cleanLog.sh  gazebo-hitl.sh  hitl.sh  jmavsim-hitl.sh  jmavsim-sitl.sh
tracker_pkg/: CMakeLists.txt  package.xml
tracker_pkg/YEAD/: EllipseDetectorYaed.cpp  EllipseDetectorYaed.h  common.h
tracker_pkg/include/tracker_node/: SocketClient.h  SocketServer.h  timer.h
tracker_pkg/launch/: calc_depth.launch  color_track.launch  hsv.launch  rs_aligned_depth.launch  tracker.launch
tracker_pkg/shell/: depth.sh
tracker_pkg/src/: color_track.cpp  commander.cpp  get_hsv.py  listener.cpp  point.cpp  xuanting_vision.cpp
zero_opencv0/: CMakeLists.txt  homography.xml  test.cpp
