<?xml version="1.0"?>
<package>
  <name>off_board_test</name>
  <version>0.0.0</version>
  <description>The union_sys uni_staple_tracker package</description>
  <maintainer email="759562862@qq.com">Zhou</maintainer>
  <license>union_sys</license>
  <url type="website"></url>
  <author email="759562862@qq.com">Zhou</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>


  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>


</package>
